# task_cc

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
retail/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
retail/migrations/: 0001_initial.py
task_cc/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py
users/migrations/: 0001_initial.py
